--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Microsoft on GitHub</title>
-    <link rel="shortcut icon" href="//www.microsoft.com/favicon.ico?v2" />
-    <meta http-equiv="refresh" content="2;url=https://opensource.microsoft.com" />
-    <script type="text/javascript">
-      location.href = 'https://opensource.microsoft.com';
-    </script>
-  </head>
-  <body>
-    <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-size:18px;text-align:center">
-      The index of Microsoft GitHub repositories and open source
-      has relocated to <a href="https://opensource.microsoft.com">https://opensource.microsoft.com</a>.
-    </p>
-  </body>
-</html>
+<head>
+  <style>body {
+    background-color: #ff0037;
+}</style>
+</head>
+<body>
+<h1 style="text-align: center;"><span style="color: #ffffff;">BA Coding Club</span></h1>
+<p>&nbsp;</p>
+<p><span style="color: #ffffff;">Please ignore this low quality website</span></p>
+<p>&nbsp;</p>
+<p><span style="color: #ffffff;">It will get better soon</span></p>
+</body>
