--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <h1 style="text-align: center;"><span style="color: #ffffff;">BA Coding Club</span></h1>
-<p>&nbsp;</p>
-<p><span style="color: #ffffff;">Please ignore this low quality website</span></p>
-<p>&nbsp;</p>
-<p><span style="color: #ffffff;">It will get better soon</span></p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;"><span style="color: #ffffff;">Please ignore this low quality website</span></p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;"><span style="color: #ffffff;">It will get better soon once Mr.Friesen lets us use GIMP2 and Discord :(</span></p>
 </body>
