--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 }</style>
 </head>
 <body>
-<h1 style="text-align: center;"><span style="color: #ffffff;">BA Coding Club</span></h1>
+<h1 style="text-align: center;"><span style="color: #ffffff;">Welcome to BA Coding Club</span></h1>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;"><span style="color: #ffffff;">Please ignore this low quality website</span></p>
 <p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><span style="color: #ffffff;">It will get better soon once Mr.Friesen lets us use GIMP2 and Discord :(</span></p>
+<p style="text-align: center;"><span style="color: #ffffff;">It will get better soon :P</span></p>
 </body>
