--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 <p style="text-align: center;"><span style="color: #ffffff;">Please ignore this low quality website</span></p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;"><span style="color: #ffffff;">It will get better soon :P</span></p>
-  <iframe src='https://minnit.chat/BACodingClub?embed&web' width='1000' height='500' style='border:none;' allowTransparency='true'></iframe><br><a href='https://minnit.chat/BACodingClub' target='_blank'>Free HTML5 Chatroom powered by Minnit Chat</a> 
+<p style="text-align: center;"></p><iframe src='https://minnit.chat/BACodingClub?embed&web' width='1000' height='500' style='border:none;' allowTransparency='true'></iframe><br><a href='https://minnit.chat/BACodingClub' target='_blank'>Free HTML5 Chatroom powered by Minnit Chat</a> 
 </body>
