--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1 style="text-align: center;"><span style="color: #ffffff;">Welcome to BA Coding Club</span></h1>
 <p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;">&nbsp;<a href="https://thebacodingclub.github.io/chat">Chat & Announcements</a></p>
+<h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/chat">Chat &amp; Announcements</a></h2>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;"><span style="color: #ffffff;">Please ignore this low quality website</span></p>
