--- a/chat.html
+++ b/chat.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body style="background-color:red;">
-<p><span style="background-color: #ffffff;"><a style="background-color: #ffffff;" href="http://thebacodingclub.github.io">Back to Main Page</a></span></p>
+<p><span style="background-color: #ffffff; color: #000000;"><a style="background-color: #ffffff; color: #000000;" href="http://thebacodingclub.github.io">Back to Main Page</a></span></p>
 <p style="text-align: center;">&nbsp;</p>
 <p align="center"><iframe src='https://minnit.chat/BACodingClub?embed&web' width='1000' height='500' align="center" style='border:none;' allowTransparency='true'></iframe><br><a href='https://minnit.chat/BACodingClub' target='_blank'></a></p>
 </body>
