--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/chat">Chat &amp; Announcements</a></h2>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;"><span style="color: #ffffff;">Please ignore this low quality website</span></p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;"><span style="color: #ffffff;">It will get better soon :P</span></p> 
