--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 }</style>
 </head>
 <body>
-<h1 style="text-align: center;"><span style="color: #ffffff;">Welcome to BA Coding Club</span></h1>
+<h2 style="text-align: center;"><span style="color: #ffffff;">Welcome to the</span></h2>
+<h1 style="text-align: center;"><span style="color: #ffffff;">BA Coding Club</span></h1>
 <p style="text-align: center;">&nbsp;</p>
 <h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/chat">Chat &amp; Announcements</a></h2>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
