--- a/codeshowcase.html
+++ b/codeshowcase.html
@@ -5,6 +5,6 @@
 <p><span style="background-color: #ffffff; color: #000000;"><a style="background-color: #ffffff; color: #000000;" href="http://thebacodingclub.github.io">Back to Main Page</a></span></p>
 <p style="text-align: center;"><a href="https://goo.gl/forms/ZFIkNcGAxRC68tJv1">Click Here to Submit Code</a></p>
 
-<p align="center"><iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTkHkZZJSl2xioUMZyLp6hdjjlg3iXzLwoRt3lygPXk6mPh2-MM69iLUuU44y7jUInLOGC7e1BPVbFv/pubhtml?widget=true&amp;headers=false" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe></p>
+<p align="center"><iframe src="https://docs.google.com/spreadsheets/d/1zxHOETX2r0PPcE31HFW6flYWgRvajSldUY7-wQmcDio/edit?usp=sharing" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe></p>
 </body>
 </html>
