--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1 style="text-align: center;"><span style="color: #ffffff;">BA Coding Club</span></h1>
 <p style="text-align: center;">&nbsp;</p>
 <h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/chat">Chat &amp; Announcements</a></h2>
-<p style="text-align: center;">&nbsp;</p>
+<h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/codeshowcase">Code Showcase</a></h2>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
