--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h2 style="text-align: center;"><span style="color: #ffffff;">Welcome to the</span></h2>
-<h1 style="text-align: center;font-size:200px;"><span style="color: #ffffff;">BA Coding Club</span></h1>
+<h1 style="text-align: center;font-size:150%;"><span style="color: #ffffff;">BA Coding Club</span></h1>
 <p style="text-align: center;">&nbsp;</p>
 <h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/chat">Chat &amp; Announcements</a></h2>
 <h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/codeshowcase">Code Showcase</a></h2>
