--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <link rel="icon" href="https://i.imgur.com/Ptbw0nS.png">
+  <title>BA Coding Club</title>
   <style>body {
     background: #EF3B36;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to top, #FFFFFF, #EF3B36);  /* Chrome 10-25, Safari 5.1-6 */
