--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ background: linear-gradient(to top, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Fir
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><span style="color: #ffffff;">Please ignore this low quality website</span></p>
+<p style="text-align: center;"><span style="color: #000000;">Please ignore the low quality of this website</span></p>
 <p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><span style="color: #ffffff;">It will get better soon :P</span></p> 
+<p style="text-align: center;"><span style="color: #000000;">It will get better soon :P</span></p> 
 </body>
