--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link rel="icon" href="https://i.imgur.com/Ptbw0nS.png">
-  <title>Code Showcase</title>
+  <title>Contact</title>
   <style>body {
     background: #EF3B36;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to top, #FFFFFF, #EF3B36);  /* Chrome 10-25, Safari 5.1-6 */
