--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,9 @@ background: linear-gradient(to top, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Fir
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">We will meet in Mrs. Austin's room every Thursday after school</p>
 <p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;">If you have any other questions or need the password</p>
+<p style="text-align: center;">If you have any other questions or need the login</p>
 <p style="text-align: center;">for this website's github, please contact Nick.</p>
+<p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">Primary Email: <a href="mailto:nicholas_tonjum@bacards.org">nicholas_tonjum@bacards.org</a></p>
 <p style="text-align: center;">Secondary Email: <a href="mailto:netonjum@hotmail.com">netonjum@hotmail.com</a></p>
 <p style="text-align: center;">iMessage/SMS: +15078380367</p>
