--- a/contact.html
+++ b/contact.html
@@ -21,5 +21,6 @@ background: linear-gradient(to top, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Fir
 <p style="text-align: center;">Secondary Email: <a href="mailto:netonjum@hotmail.com">netonjum@hotmail.com</a></p>
 <p style="text-align: center;">iMessage/SMS: +15078380367</p>
 <p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;"><a href="https://github.com/TheBACodingClub/TheBACodingClub.github.io">Github Link</a></p>
 </body>
 </html>
