--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ background: linear-gradient(to top, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Fir
 <p style="text-align: center;">&nbsp;</p>
 <h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/chat">Chat &amp; Announcements</a></h2>
 <h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/codeshowcase">Code Showcase</a></h2>
+<h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/resources">Resources</a></h2>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
