--- a/resources.html
+++ b/resources.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link rel="icon" href="https://i.imgur.com/Ptbw0nS.png">
-  <title>Contact</title>
+  <title>Resources</title>
   <style>body {
     background: #EF3B36;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to top, #FFFFFF, #EF3B36);  /* Chrome 10-25, Safari 5.1-6 */
@@ -10,17 +10,17 @@ background: linear-gradient(to top, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Fir
 </head>
 <body style="background-color:red;">
 <p><span style="background-color: #ffffff; color: #000000;"><a style="background-color: #ffffff; color: #000000;" href="http://thebacodingclub.github.io">Back to Main Page</a></span></p>
-<h1 style="text-align: center;"><span style="color: #ffffff;">Resources</span></h1>
+<<h1 style="text-align: center;"><span style="color: #ffffff;">Resources</span></h1>
 <h4 style="text-align: center;"><span style="color: #ffffff;">Here you can find resources to help you with your projects!</span></h4>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <h2 style="text-align: center;"><span style="color: #ffffff;">Python</span></h2>
-<p style="text-align: center;"><a href="https://repl.it/">https://repl.it/</a> - Python Terminal</p>
+<p style="text-align: center;"><a href="https://repl.it/">https://repl.it/</a> - <span style="color: #ffffff;">Python Terminal</span></p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <h2 style="text-align: center;"><span style="color: #ffffff;">HTML/CSS</span></h2>
-<p style="text-align: center;"><a href="https://github.com/">https://github.com/</a> - Project Hosting&nbsp;</p>
-<p style="text-align: center;">&nbsp;<a href="https://html-online.com/editor/">https://html-online.com/editor/</a> - Visual HTML Editor</p>
-<p style="text-align: center;"><a href="https://bit.ly/2NZDA3b">https://bit.ly/2NZDA3b</a></p>
+<p style="text-align: center;"><a href="https://github.com/">https://github.com/</a> - <span style="color: #ffffff;">Project Hosting&nbsp;</span></p>
+<p style="text-align: center;">&nbsp;<a href="https://html-online.com/editor/">https://html-online.com/editor/</a> - <span style="color: #ffffff;">Visual HTML Editor</span></p>
+<p style="text-align: center;"><a href="https://bit.ly/2NZDA3b">https://bit.ly/2NZDA3b</a> - <span style="color: #ffffff;">Tutorial for Publishing your Site</span></p>
 </body>
 </html>
