--- a/resources.html
+++ b/resources.html
@@ -10,7 +10,7 @@ background: linear-gradient(to top, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Fir
 </head>
 <body style="background-color:red;">
 <p><span style="background-color: #ffffff; color: #000000;"><a style="background-color: #ffffff; color: #000000;" href="http://thebacodingclub.github.io">Back to Main Page</a></span></p>
-<<h1 style="text-align: center;"><span style="color: #ffffff;">Resources</span></h1>
+<h1 style="text-align: center;"><span style="color: #ffffff;">Resources</span></h1>
 <h4 style="text-align: center;"><span style="color: #ffffff;">Here you can find resources to help you with your projects!</span></h4>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -22,5 +22,15 @@ background: linear-gradient(to top, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Fir
 <p style="text-align: center;"><a href="https://github.com/">https://github.com/</a> - <span style="color: #ffffff;">Project Hosting&nbsp;</span></p>
 <p style="text-align: center;">&nbsp;<a href="https://html-online.com/editor/">https://html-online.com/editor/</a> - <span style="color: #ffffff;">Visual HTML Editor</span></p>
 <p style="text-align: center;"><a href="https://bit.ly/2NZDA3b">https://bit.ly/2NZDA3b</a> - <span style="color: #ffffff;">Tutorial for Publishing your Site</span></p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
 </body>
 </html>
