--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ background: linear-gradient(to top, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Fir
 <h2 style="text-align: center;"><span style="color: #ffffff;">Welcome to the</span></h2>
 <h1 style="text-align: center;"><span style="color: #ffffff;">BA Coding Club</span></h1>
 <p style="text-align: center;">&nbsp;</p>
+<h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/schedule">Schedule</a></h2>
 <h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/chat">Chat &amp; Announcements</a></h2>
 <h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/codeshowcase">Code Showcase</a></h2>
 <h2 style="text-align: center;"> <a href="https://thebacodingclub.github.io/resources">Resources</a></h2>
