--- a/schedule.html
+++ b/schedule.html
@@ -22,6 +22,8 @@ background: linear-gradient(to top, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Fir
 <p style="text-align: center;"><span style="color: #ffffff;">9/27/18 - 3:00 PM in G7</span></p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;"><a href="https://goo.gl/forms/kx4hWqjqHh80kbet2">Suggest an Activity or Idea</a></p>
+<p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
