--- a/schedule.html
+++ b/schedule.html
@@ -10,16 +10,7 @@ background: linear-gradient(to top, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Fir
 </head>
 <body style="background-color:red;">
 <p><span style="background-color: #ffffff; color: #000000;"><a style="background-color: #ffffff; color: #000000;" href="http://thebacodingclub.github.io">Back to Main Page</a></span></p>
-<h1 style="text-align: center;"><span style="color: #ffffff;">September 2018 Schedule</span></h1>
-<p style="text-align: center;"><span style="color: #ffffff;">This month we will be working with Python.</span></p>
-<p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><span style="color: #ffffff;">We will be using repl.it (found in resources page) to</span></p>
-<p style="text-align: center;"><span style="color: #ffffff;">compile our python scripts. Further information will be</span></p>
-<p style="text-align: center;"><span style="color: #ffffff;">provided on in-class dates.</span></p>
-<p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><span style="color: #ffffff;">Coding Club will be hosted:</span></p>
-<p style="text-align: center;"><span style="color: #ffffff;">9/20/18 - 3:00 PM in G7</span></p>
-<p style="text-align: center;"><span style="color: #ffffff;">9/27/18 - 3:00 PM in G7</span></p>
+<iframe src="https://docs.google.com/document/d/17Ca7x7eIG5OFDQasfn3iH4B50iX9eSjIGhZspGBgZnA/edit?usp=sharing"></iframe>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;"><a href="https://goo.gl/forms/kx4hWqjqHh80kbet2">Suggest an Activity or Idea</a></p>
