--- a/schedule.html
+++ b/schedule.html
@@ -10,7 +10,7 @@ background: linear-gradient(to top, #FFFFFF, #EF3B36); /* W3C, IE 10+/ Edge, Fir
 </head>
 <body style="background-color:red;">
 <p><span style="background-color: #ffffff; color: #000000;"><a style="background-color: #ffffff; color: #000000;" href="http://thebacodingclub.github.io">Back to Main Page</a></span></p>
-<iframe src="https://docs.google.com/document/d/17Ca7x7eIG5OFDQasfn3iH4B50iX9eSjIGhZspGBgZnA/edit?usp=sharing"></iframe>
+<p align="center"><iframe src="https://docs.google.com/document/d/17Ca7x7eIG5OFDQasfn3iH4B50iX9eSjIGhZspGBgZnA/edit?usp=sharing" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe></p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;"><a href="https://goo.gl/forms/kx4hWqjqHh80kbet2">Suggest an Activity or Idea</a></p>
