--- a/schoolutils.html
+++ b/schoolutils.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <head>
+#grad {
+  background: rgb(253,29,29);
+  background: radial-gradient(circle, rgba(253,29,29,1) 0%, rgba(255,255,255,1) 100%);
+  }
 </head>
-<body>
+<body id="grad">
 <h1>Test</h1>
 </body>
 </html>
