--- a/schoolutils.html
+++ b/schoolutils.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <head>
+<style>
 #grad {
   background: rgb(253,29,29);
   background: radial-gradient(circle, rgba(253,29,29,1) 0%, rgba(255,255,255,1) 100%);
   }
+  </style>
 </head>
 <body id="grad">
 <h1>Test</h1>
