--- a/schoolutils.html
+++ b/schoolutils.html
@@ -51,7 +51,7 @@
 <body id="grad">
 <h1>Test</h1>
   <div align="center">
-<a href="#" class="powerschoolbutton">Powerschool Grades</a>
+<a href="https://bacards.powerschool.com/guardian/home.html?_userTypeHint=student" class="powerschoolbutton">Powerschool Grades</a>
   </div>
 </body>
 </html>
