--- a/cnc.html
+++ b/cnc.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <head>
 <style>
-
+.headed {
+font-family: Impact, Charcoal, sans-serif;
+font-size: 40px;
+letter-spacing: 0px;
+word-spacing: 0px;
+color: #FFFFFF;
+font-weight: 400;
+text-decoration: none;
+font-style: normal;
+font-variant: normal;
+text-transform: none;
+	}
+	
 .powerschoolbutton {
 	-moz-box-shadow:inset 0px -3px 0px 0px #cf866c;
 	-webkit-box-shadow:inset 0px -3px 0px 0px #cf866c;
@@ -49,7 +61,7 @@
   </style>
 </head>
 <body id="grad">
-<h1>Test</h1>
+<h1 class="headed">Test</h1>
   <div align="center">
 <a href="https://www.youtube.com/channel/UC8g2MAqvhOfIdRkBjqF1I-g" class="powerschoolbutton">ShopSabre Youtube</a>
   </div>
