--- a/cnc.html
+++ b/cnc.html
@@ -61,7 +61,9 @@ text-transform: none;
   </style>
 </head>
 <body id="grad">
+	<div align="center">
 <h1 class="headed">Test</h1>
+	</div>
   <div align="center">
 <a href="https://www.youtube.com/channel/UC8g2MAqvhOfIdRkBjqF1I-g" class="powerschoolbutton">ShopSabre Youtube</a>
   </div>
