--- a/cnc.html
+++ b/cnc.html
@@ -12,6 +12,11 @@ text-decoration: none;
 font-style: normal;
 font-variant: normal;
 text-transform: none;
+text-shadow:
+	-1px -1px 0 #000,
+	1px -1px 0 #000,
+	-1px 1px 0 #000,
+	1px 1px 0 #000;
 	}
 	
 .powerschoolbutton {
