--- a/cnc.html
+++ b/cnc.html
@@ -67,7 +67,7 @@ text-shadow:
 </head>
 <body id="grad">
 	<div align="center">
-<h1 class="headed">Test</h1>
+<h1 class="headed">BA Woodshop CNC Machine</h1>
 	</div>
   <div align="center">
 <a href="https://www.youtube.com/channel/UC8g2MAqvhOfIdRkBjqF1I-g" class="powerschoolbutton">ShopSabre Youtube</a>
