--- a/cnc.html
+++ b/cnc.html
@@ -72,5 +72,8 @@ text-shadow:
   <div align="center">
 <a href="https://www.youtube.com/channel/UC8g2MAqvhOfIdRkBjqF1I-g" class="powerschoolbutton">ShopSabre Youtube</a>
   </div>
+	<div align="center">
+<a href="https://thebacodingclub.github.io/cncguides.html" class="powerschoolbutton">Guides</a>
+  </div>
 </body>
 </html>
