--- a/cnc.html
+++ b/cnc.html
@@ -73,7 +73,7 @@ text-shadow:
 <a href="https://www.youtube.com/channel/UC8g2MAqvhOfIdRkBjqF1I-g" class="powerschoolbutton">ShopSabre Youtube</a>
   </div>
 	<br>
-	<div align="center">
+	<div align="center" stye="margin-top: 50px;">
 <a href="https://thebacodingclub.github.io/cncguides.html" class="powerschoolbutton">Guides</a>
   </div>
 </body>
