--- a/schoolutils.html
+++ b/schoolutils.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <head>
 <style>
-
+.headed {
+font-family: Impact, Charcoal, sans-serif;
+font-size: 40px;
+letter-spacing: 0px;
+word-spacing: 0px;
+color: #FFFFFF;
+font-weight: 400;
+text-decoration: none;
+font-style: normal;
+font-variant: normal;
+text-transform: none;
+text-shadow:
+	1px 1px 0 #000;
+	}
+	
 .powerschoolbutton {
 	-moz-box-shadow:inset 0px -3px 0px 0px #cf866c;
 	-webkit-box-shadow:inset 0px -3px 0px 0px #cf866c;
@@ -49,9 +63,21 @@
   </style>
 </head>
 <body id="grad">
-<h1>Test</h1>
+	<div align="center">
+<h1 class="headed">BA Class of 2019</h1>
+	</div>
   <div align="center">
-<a href="https://bacards.powerschool.com/guardian/home.html?_userTypeHint=student" class="powerschoolbutton">Powerschool Grades</a>
+<a href="https://www.youtube.com/channel/UC8g2MAqvhOfIdRkBjqF1I-g" class="powerschoolbutton">Powerschool Grades</a>
+  </div>
+	<br>
+	<div align="center" stye="margin-top: 50px;">
+<a href="https://thebacodingclub.github.io/cncguides.html" class="powerschoolbutton">Classroom Pages</a>
+  </div>
+	<div align="center" stye="margin-top: 50px;">
+<a href="https://thebacodingclub.github.io/cncguides.html" class="powerschoolbutton">Quizlets</a>
+  </div>
+	<div align="center" stye="margin-top: 50px;">
+<a href="https://thebacodingclub.github.io/cncguides.html" class="powerschoolbutton">Memories</a>
   </div>
 </body>
 </html>
