--- a/cnc.html
+++ b/cnc.html
@@ -71,7 +71,19 @@ text-shadow:
   </div>
 	<br>
 	<div align="center" stye="margin-top: 50px;">
+<a href="https://thebacodingclub.github.io/cncprojects.html" class="powerschoolbutton">Projects</a>
+  </div>
+	<br>
+	<div align="center" stye="margin-top: 50px;">
+<a href="https://thebacodingclub.github.io/cncfilesharing.html" class="powerschoolbutton">File Sharing</a>
+  </div>
+	<br>
+	<div align="center" stye="margin-top: 50px;">
 <a href="https://thebacodingclub.github.io/cncguides.html" class="powerschoolbutton">Guides</a>
+  </div>
+<div align="center" stye="margin-top: 50px;">
+	<br>
+<a href="https://thebacodingclub.github.io/cncsafety.html" class="powerschoolbutton">Rules & Requirements</a>
   </div>
 </body>
 </html>
