--- a/cnc.html
+++ b/cnc.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <head>
 <style>
+.footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   color: black;
+   text-align: center;
+}
 .headed {
 font-family: Impact, Charcoal, sans-serif;
 font-size: 40px;
@@ -85,5 +93,8 @@ text-shadow:
 	<div align="center" stye="margin-top: 50px;">
 <a href="https://thebacodingclub.github.io/cncsafety.html" class="powerschoolbutton">Rules & Requirements</a>
   </div>
+	<div class="footer">
+		<p>This site was created by Nick Tonjum for Bethlehem Academy's Wood Working Class and Coding Club.</p>
+	</div>
 </body>
 </html>
