--- a/jacieisgay.html
+++ b/jacieisgay.html
@@ -7,16 +7,16 @@ font-size: 40px;
 letter-spacing: 2px;
 word-spacing: 2px;
 color: #FFFFFF;
+text-shadow: 2px 2px;
 font-weight: normal;
-text-decoration: underline solid rgb(68, 68, 68);
 font-style: normal;
 font-variant: normal;
 text-transform: none;
 }
     body {
-      animation: colorchange 50s; /* animation-name followed by duration in seconds*/
+      animation: colorchange 5s; /* animation-name followed by duration in seconds*/
          /* you could also use milliseconds (ms) or something like 2.5s */
-      -webkit-animation: colorchange 50s; /* Chrome and Safari */
+      -webkit-animation: colorchange 5s; /* Chrome and Safari */
     }
 
     @keyframes colorchange
@@ -39,5 +39,5 @@ text-transform: none;
     </style>
 </head>
 <body>
-<p class="raunchy">You're fucking gay</p>
+<p align="center" class="raunchy">You're fucking gay</p>
 </body>
