--- a/jacieisgay.html
+++ b/jacieisgay.html
@@ -7,35 +7,38 @@ font-size: 40px;
 letter-spacing: 2px;
 word-spacing: 2px;
 color: #FFFFFF;
-text-shadow: 2px 2px;
+text-shadow: 2px 2px #000000;
 font-weight: normal;
 font-style: normal;
 font-variant: normal;
 text-transform: none;
 }
     body {
-      animation: colorchange 5s; /* animation-name followed by duration in seconds*/
-         /* you could also use milliseconds (ms) or something like 2.5s */
-      -webkit-animation: colorchange 5s; /* Chrome and Safari */
-    }
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+.container {
+  background: linear-gradient(225deg, #ffabab, #ffdaab, #ddffab, #abe4ff, #d9abff);
+  background-size: 300% 300%;
+  box-sizing: border-box;
+  display: table;
+  height: 100vh;
+  margin: 0;
+  position: relative;
+  width: 100vw;
+  -webkit-animation: Rainbow 25s ease infinite;
+  -moz-animation: Rainbow 25s ease infinite;
+  animation: Rainbow 25s ease infinite;
+}
 
-    @keyframes colorchange
-    {
-      0%   {background: red;}
-      25%  {background: yellow;}
-      50%  {background: blue;}
-      75%  {background: green;}
-      100% {background: red;}
-    }
-
-    @-webkit-keyframes colorchange /* Safari and Chrome - necessary duplicate */
-    {
-      0%   {background: red;}
-      25%  {background: yellow;}
-      50%  {background: blue;}
-      75%  {background: green;}
-      100% {background: red;}
-    }
+@-webkit-keyframes Rainbow {
+  0% {
+    background-position: 94% 0%; }
+  50% {
+    background-position: 7% 100%; }
+  100% {
+    background-position: 94% 0%; } }
     </style>
 </head>
 <body>
