--- a/schoolutils.html
+++ b/schoolutils.html
@@ -13,7 +13,7 @@ font-style: normal;
 font-variant: normal;
 text-transform: none;
 text-shadow:
-	1px 1px 0 #000;
+	1px 1px 0 #ff7575;
 	}
 	
 .powerschoolbutton {
@@ -66,20 +66,21 @@ text-shadow:
 	<div align="center">
 <h1 class="headed">BA Class of 2019</h1>
 	</div>
-  <div align="center">
-<a href="https://www.youtube.com/channel/UC8g2MAqvhOfIdRkBjqF1I-g" class="powerschoolbutton">Powerschool Grades</a>
+	<br>
+	<div align="center" stye="margin-top: 50px;">
+<a href="https://bethlehemacademyschool.learning.powerschool.com/u/" class="powerschoolbutton">Classroom Pages</a>
   </div>
 	<br>
 	<div align="center" stye="margin-top: 50px;">
-<a href="https://thebacodingclub.github.io/cncguides.html" class="powerschoolbutton">Classroom Pages</a>
+<a href="https://thebacodingclub.github.io/2019pictures.html" class="powerschoolbutton">Pictures</a>
   </div>
 	<br>
 	<div align="center" stye="margin-top: 50px;">
-<a href="https://thebacodingclub.github.io/cncguides.html" class="powerschoolbutton">Quizlets</a>
+<a href="https://quizlet.com/class/1016706/" class="powerschoolbutton">Quizlets</a>
   </div>
 	<br>
 	<div align="center" stye="margin-top: 50px;">
-<a href="https://thebacodingclub.github.io/cncguides.html" class="powerschoolbutton">Memories</a>
+<a href="https://docs.google.com/document/d/1oMTdixR9OivKuORiIwebv8wcOfQlIssgb5ThXNuMwqk/" class="powerschoolbutton">Memories</a>
   </div>
 </body>
 </html>
