Update and rename schoolutils.html to classof2019.html

--- a/classof2019.html
+++ b/classof2019.html
@@ -80,7 +80,7 @@ text-shadow:
   </div>
 	<br>
 	<div align="center" stye="margin-top: 50px;">
-<a href="https://docs.google.com/document/d/1oMTdixR9OivKuORiIwebv8wcOfQlIssgb5ThXNuMwqk/" class="powerschoolbutton">Memories</a>
+<a href="https://thebacodingclub.github.io/2019/memories" class="powerschoolbutton">Memories</a>
   </div>
 </body>
 </html>
