--- a/classof2019.html
+++ b/classof2019.html
@@ -68,7 +68,7 @@ text-shadow:
 	</div>
 	<br>
 	<div align="center" stye="margin-top: 50px;">
-<a href="https://bethlehemacademyschool.learning.powerschool.com/u/" class="powerschoolbutton">Classroom Pages</a>
+<a href="https://bethlehemacademyschool.learning.powerschool.com/" class="powerschoolbutton">Classroom Pages</a>
   </div>
 	<br>
 	<div align="center" stye="margin-top: 50px;">
