--- a/classof2019.html
+++ b/classof2019.html
@@ -82,5 +82,9 @@ text-shadow:
 	<div align="center" stye="margin-top: 50px;">
 <a href="https://thebacodingclub.github.io/2019/memories" class="powerschoolbutton">Memories</a>
   </div>
+	<br>
+	<div align="center" stye="margin-top: 50px;">
+<a href="https://thebacodingclub.github.io/2019/members" class="powerschoolbutton">Members</a>
+  </div>
 </body>
 </html>
