--- a/classof2019.html
+++ b/classof2019.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+<link rel="icon" href="https://i.imgur.com/Ptbw0nS.png">
+<title>Class of 2019</title>
 <style>
 .headed {
 font-family: Impact, Charcoal, sans-serif;
