--- a/cnc.html
+++ b/cnc.html
@@ -83,7 +83,7 @@ text-shadow:
   </div>
 	<br>
 	<div align="center" stye="margin-top: 50px;">
-<a href="https://thebacodingclub.github.io/cncfilesharing.html" class="powerschoolbutton">File Sharing</a>
+<a href="https://drive.google.com/drive/folders/1SqqMoS2oA1kLgh1UaZJFM0QdfHwaNEEE?usp=sharing" class="powerschoolbutton">File Sharing</a>
   </div>
 	<br>
 	<div align="center" stye="margin-top: 50px;">
