--- a/cnc.html
+++ b/cnc.html
@@ -75,7 +75,7 @@ text-shadow:
 <h1 class="headed">BA Woodshop CNC Machine</h1>
 	</div>
   <div align="center">
-<a href="https://thebacodingclub.github.io/cncvideos.html" class="powerschoolbutton">Video Tutorials</a>
+<a href="https://www.youtube.com/playlist?list=PLgYwGIBZ95wAZ1l57wpgRz-Fk9d1_ei8_" class="powerschoolbutton">Video Tutorials</a>
   </div>
 	<br>
 	<div align="center" stye="margin-top: 50px;">
